# harness-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  README.zh.md  WORKFLOW.md  pyproject.toml
.claude/commands/: harness-active.md  harness-archive.md  harness-bugfix.md  harness-change.md  harness-enter.md  harness-exit.md  harness-feedback.md  harness-ff.md  harness-init.md  harness-install.md  harness-language.md  harness-next.md  harness-plan.md  harness-regression.md  harness-rename.md  harness-requirement.md  harness-status.md  harness-update.md  harness-use.md  harness-version.md  harness.md
.claude/skills/harness/: SKILL.md
.codex/: AGENTS.md
.codex/harness/: config.json  managed-files.json
.codex/skills/harness-active/: SKILL.md
.codex/skills/harness-archive/: SKILL.md
.codex/skills/harness-bugfix/: SKILL.md
.codex/skills/harness-change/: SKILL.md
.codex/skills/harness-enter/: SKILL.md
.codex/skills/harness-exit/: SKILL.md
.codex/skills/harness-feedback/: SKILL.md
.codex/skills/harness-ff/: SKILL.md
.codex/skills/harness-init/: SKILL.md
.codex/skills/harness-install/: SKILL.md
.codex/skills/harness-language/: SKILL.md
.codex/skills/harness-next/: SKILL.md
.codex/skills/harness-plan/: SKILL.md
.codex/skills/harness-regression/: SKILL.md
.codex/skills/harness-rename/: SKILL.md
.harness/: feedback.jsonl  harness-feedback.json
.qoder/commands/: harness-active.md  harness-archive.md  harness-bugfix.md  harness-change.md  harness-enter.md  harness-exit.md  harness-ff.md  harness-init.md  harness-install.md  harness-language.md  harness-next.md  harness-plan.md  harness-regression.md  harness-rename.md  harness-status.md  harness-update.md  harness-use.md  harness-version.md  harness.md
.workflow/constraints/: boundaries.md  recovery.md  risk.md  suggest-conversion.md
.workflow/context/: index.md  project-profile.md  role-model-map.yaml
.workflow/evaluation/: acceptance.md  index.md  testing.md
.workflow/flow/: artifacts-layout.md  playbook-layout.md  repository-layout.md  stages.md
.workflow/state/: action-log.md  platforms.yaml  runtime-block.yaml  runtime.yaml
.workflow/tools/: ratings.yaml  selection-guide.md  stage-tools.md
artifacts/requirements/: req-01-版本重做.md  req-05-功能扩展.md  req-05-遗留问题修复.md  req-12-suggest批量转成需求.md  req-12-我希望可以状态记录的时候记录一份对话摘要，这样下次我们进入或者恢复对话的时候可以展示这个摘要，让我们也可以快速回忆之前的沟通记录.md  req-13-如果有本地git仓库，归档后可以询问是否要提交git.md  req-14-每个需求在各个阶段的流转可以做一个记录，然后我可以指定校验某个项目的流程是否符合我们的要求.md  req-15-每个需求在各个阶段的流转可以做一个记录，然后我可以指定校验某个项目的流程是否符合我们的要求.md  req-16-所有的regression命令必须沉淀经验，当然不一定有经验沉淀但是必须沉淀，因为regression无论是问题还是需求肯定都说明流程有问题.md  req-17-项目编译要过写成开发测试验收的硬门禁.md  req-18-建议为 req-12 补充更精确的 stage 时间戳：当前 req-12 的时间戳是在 executing 阶段后补录的，无法准确反映各阶段真实耗时。未来应确保 harness next 正确记录时间戳。.md  req-19-建议梳理并修复预存测试失败：tests.md  req-20-排查严重问题:为什么workflow中的工具层没有了？所有的脚本全部重写一遍以避免再次发生类似的问题.md  req-20-经验需要索引目录避免经验过多导致问题。flow中每个阶段结束都需要沉淀下经验，我关注到现在test都没有合适的经验沉淀。regression确定的bug就可以总结到test和测试验收阶段中不是吗.md  req-21-Harness审查检查清单与审查员角色.md  req-21-建议转化成需求要打包不要分开，打包成需求之后原有建议要清除.md  req-21-批量建议合集（3条）.md  req-22-agent引导流程优化.md  req-22-批量建议合集（19条）.md  req-23-bugfix快速修复与验证.md  req-24-工具层索引完整性与文档适配性审查.md  req-27-制品输出到分支特定目录.md
docs/: README.md
docs/memory/: constitution.md
scripts/: vendor-gstack.sh
src/harness_workflow/: __init__.py  __main__.py  backup.py  cli.py  core.py  cycle_detection.py  decision_log.py  ff_auto.py  ff_timeout.py  project_scanner.py  slug.py  validate_contract.py  validate_human_docs.py  workflow_helpers.py
tests/: conftest.py  test_acceptance_gate_contract.py  test_active_agent_and_feedback_relocation.py  test_active_agent_feedback_edge_cases.py  test_adopt_as_managed_protection.py  test_agent_cleanup.py  test_analyst_role_merge.py  test_apply_all_path_slug.py  test_archive_bugfix.py  test_archive_meta.py  test_archive_path.py  test_archive_requirement_flat.py  test_archive_requirement_flow.py  test_archive_requirement_three_tiers.py  test_archive_revert_dry_run.py  test_artifact_placement_chg01.py  test_assistant_role_contract7.py  test_block_protocol_e2e.py  test_briefing_ff_regression.py  test_bugfix12_archive_input_validation.py  test_bugfix9_force_managed_and_user_write.py  test_bugfix_11_flow_layout.py  test_bugfix_12_runtime_block_whitelist.py  test_bugfix_13_project_skeleton_bootstrap.py  test_bugfix_layout_v2.py  test_bugfix_runtime.py  test_build_cache_freshness.py  test_check_scope_limited.py  test_chg02_analyst_step_a1_5_lint.py  test_chg03_skill_mirror_lint.py  test_chg03_title_contract.py  test_cli.py  test_cli_auto_locate.py  test_cli_routing.py  test_cli_trivial.py  test_contract7_lint.py  test_create_change_flat.py  test_create_regression_flat.py  test_create_requirement_flat.py  test_create_suggestion_frontmatter.py  (+116 more)
tests/installer/: test_gstack_skills_push.py  test_install_runtime_writer.py  test_requirement_fallback_flag.py
tests/integration/: test_install_pushes_gstack.py  test_req56_fallback_dogfood.py
tools/: harness_archive.py  harness_cycle_detector.py  harness_exit.py  harness_export_feedback.py  harness_install.py  harness_log_action.py  harness_next.py  harness_tool_search.py  harness_validate.py
workflow/constraints/: boundaries.md  index.md  risk.md
workflow/context/: index.md  mcp-registry.yaml
workflow/evaluation/: index.md
workflow/flow/: stages.md
workflow/state/: runtime.yaml
workflow/templates/: mcp-catalog.yaml  regression-meta.yaml
workflow/tools/: maintenance.md  selection-guide.md  stage-tools.md
(+2024 files in other folders)
