[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-workflow"
version = "0.1.0"
description = "Harness Engineering workflow CLI and installable Codex skill."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "questionary>=2.0.0",
  "pyyaml>=6.0",
]
authors = [
  { name = "togally" }
]
license = { text = "MIT" }
keywords = ["harness", "agent", "workflow", "codex", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
harness = "harness_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_workflow = [
  "skills/harness/SKILL.md",
  "skills/harness/agent/*.md",
  "assets/skill/SKILL.md",
  "assets/skill/agents/openai.yaml",
  "assets/skill/assets/templates/*.tmpl",
  "assets/templates/*.md",
  "assets/skill/references/*.md",
  "assets/skill/scripts/*.py",
  "assets/skill/tests/*.py",
  "assets/scaffold_v2/WORKFLOW.md",
  # chg-08（pyproject.toml package-data 补齐 + 加打包契约测试（防漏装回归））：
  # scaffold_v2/.workflow/ mirror 下任何文件都必须打入 wheel；细分 patterns
  # 易漏（reg-02 实证 14 类漏装），统一改为 `**/*` 全量 glob，setuptools >= 69
  # 原生支持。配套契约测试 tests/test_package_data_completeness.py。
  "assets/scaffold_v2/.workflow/**/*",
  "harness_workflow/tools/*.py",
]
