[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-workflow"
version = "1.0.0"
description = "Harness Engineering workflow CLI and installable Codex skill."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "questionary>=2.0.0",
  "pyyaml>=6.0",
]
authors = [
  { name = "togally" }
]
license = { text = "MIT" }
keywords = ["harness", "agent", "workflow", "codex", "claude"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
harness = "harness_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_workflow = [
  "skills/harness/SKILL.md",
  "skills/harness/agent/*.md",
  "assets/skill/SKILL.md",
  "assets/skill/agents/openai.yaml",
  "assets/skill/assets/templates/*.tmpl",
  "assets/templates/*.md",
  # bugfix-13 round-3（install 时自动创建 artifacts/project 骨架与索引模板）packaging 修复：
  # project-skeleton/ 子目录递归全量打包；与 reg-02 / chg-08 scaffold_v2 同型病同 fix
  "assets/templates/project-skeleton/**/*",
  # req-53（新增-harness-命令-给项目添加规范-经验-工具-引导式）/ chg-02：
  # project-add/ 下 3 份 .md.tmpl 模板（rule / experience / tool）必须打入 wheel
  "assets/templates/project-add/**/*",
  "assets/skill/references/*.md",
  "assets/skill/scripts/*.py",
  "assets/skill/tests/*.py",
  "assets/scaffold_v2/WORKFLOW.md",
  # chg-08（pyproject.toml package-data 补齐 + 加打包契约测试（防漏装回归））：
  # scaffold_v2/.workflow/ mirror 下任何文件都必须打入 wheel；细分 patterns
  # 易漏（reg-02 实证 14 类漏装），统一改为 `**/*` 全量 glob，setuptools >= 69
  # 原生支持。配套契约测试 tests/test_package_data_completeness.py。
  "assets/scaffold_v2/.workflow/**/*",
  "harness_workflow/tools/*.py",
]
